add images and filters

--- a/11 - Images and Filters.ipynb
+++ b/11 - Images and Filters.ipynb
@@ -5,7 +5,7 @@
    "id": "feb5ed1b",
    "metadata": {},
    "source": [
-    "# Visão Computacional: Representação de Imagens e Convoluções\n",
+    "# Imagens e Filtros\n",
     "\n",
     "Neste notebook, exploraremos os fundamentos da Visão Computacional, focando em como as imagens são representadas computacionalmente e como a operação de convolução é utilizada para extrair características por meio de filtros (kernels).\n",
     "\n",
@@ -29,7 +29,7 @@
    "id": "6a17c2c5",
    "metadata": {},
    "source": [
-    "## 1. Representação de Imagens com NumPy\n",
+    "## 1. Representação de Imagens\n",
     "\n",
     "Uma imagem digital é, fundamentalmente, uma estrutura de dados numérica. Para o computador, uma imagem é um tensor (ou um array multidimensional) de valores de intensidade de pixel. Em uma imagem em escala de cinza (*grayscale*), temos uma matriz 2D onde cada elemento representa a intensidade de um pixel, geralmente em um intervalo de [0, 255]. Para imagens coloridas, o modelo mais comum é o RGB, que utiliza um tensor 3D, onde a terceira dimensão representa os canais de cor: Vermelho (Red), Verde (Green) e Azul (Blue)."
    ]
@@ -684,6 +684,52 @@
     "ax.set_title(\"Direção dos Gradientes (Quiver Plot)\")\n",
     "ax.axis('off') # Remove os eixos para uma visualização mais limpa\n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "249567fe",
+   "metadata": {},
+   "source": [
+    "### As Limitações dos Filtros Manuais\n",
+    "\n",
+    "O principal obstáculo dos filtros manuais é que eles são **fixos e específicos para uma tarefa de baixo nível**.\n",
+    "\n",
+    "1.  **Incapacidade de Capturar Complexidade**: Um filtro de Sobel é excelente para detectar bordas, mas como projetaríamos manualmente um filtro para detectar características mais complexas, como um \"olho de gato\", a \"textura de uma roda de carro\" ou o \"padrão de uma folha\"? A complexidade visual do mundo real torna impossível a criação manual de filtros para cada característica relevante.\n",
+    "\n",
+    "2.  **Falta de Generalização e Robustez**: Filtros manuais são frágeis. Um detector de bordas pode funcionar bem em uma imagem com iluminação e contraste ideais, mas falhar completamente se a iluminação mudar, o objeto rotacionar ou a perspectiva for diferente. Eles não se adaptam às infinitas variações presentes em dados do mundo real.\n",
+    "\n",
+    "3.  **Escalabilidade Inviável**: Para reconhecer um objeto complexo como um \"cachorro\", precisaríamos de uma combinação de centenas ou milhares de características: contornos, texturas de pelos, formas das orelhas, focinho, etc. Tentar orquestrar manualmente a aplicação e combinação de filtros para essa tarefa seria computacionalmente e logicamente inviável.\n",
+    "\n",
+    "Isso nos leva a uma questão fundamental: e se, em vez de nós projetarmos os filtros, pudéssemos criar um sistema que **aprende os valores ótimos dos filtros diretamente a partir dos dados**?"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "07f37b2b",
+   "metadata": {},
+   "source": [
+    "## Exercícios"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4a7c62c8",
+   "metadata": {},
+   "source": [
+    "### Exercício 1\n",
+    "\n",
+    "Implemente o filtro *Bevel* manualmente e aplique-o em uma imagem."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6a4ae961",
+   "metadata": {},
+   "source": [
+    "### Exercício 2\n",
+    "\n",
+    "Faça upload de uma imagem RGB e aplique um filtro diferente para cada canal de cor. Em seguida, forma uma nova imagem colorida."
    ]
   }
  ],
