add object localization

--- a/15 - Custom Dataset.ipynb
+++ b/15 - Custom Dataset.ipynb
@@ -157,7 +157,7 @@
    "source": [
     "## Definição do Modelo\n",
     "\n",
-    "Defina aqui o modelo que será utilizado, sendo implementação própria ou um modelo pré-treinado."
+    "Defina aqui o modelo que será utilizado, sendo implementação própria ou um modelo pré-treinado. Teste diversas arquiteturas diferentes e verifique qual delas tem melhor desempenho em validação."
    ]
   },
   {
