--- a/17 - Object Detection.ipynb
+++ b/17 - Object Detection.ipynb
@@ -1,6 +1,16 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "29080652",
+   "metadata": {},
+   "source": [
+    "# Detecção de Objetos\n",
+    "\n",
+    "Este notebook introduz os conceitos fundamentais da detecção de objetos, uma tarefa de visão computacional que envolve identificar e localizar múltiplos objetos dentro de uma imagem. Abordaremos uma implementação inspirada na arquitetura YOLO (You Only Look Once), focando na criação de um modelo capaz de prever caixas delimitadoras (bounding boxes) e classes para objetos. Para simplificar o problema e focar nos mecanismos centrais, construiremos um conjunto de dados sintético usando dígitos do MNIST, onde cada imagem conterá três dígitos em posições aleatórias."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "439bebac",
@@ -304,25 +314,36 @@
    "source": [
     "def build_targets(batch_targets, S, C):\n",
     "    B = len(batch_targets)\n",
-    "    T = torch.zeros(B, S, S, 1+4+C, dtype=torch.float32)\n",
-    "    for b, targ in enumerate(batch_targets):\n",
-    "        if targ.numel() == 0: \n",
+    "    T = torch.zeros(B, S, S, 1+4+C)\n",
+    "\n",
+    "    for b, targets in enumerate(batch_targets):\n",
+    "        if targets.numel() == 0:\n",
     "            continue\n",
-    "        chosen = {}\n",
-    "        for cls, cx, cy, w, h in targ.tolist():\n",
-    "            i = int(min(S-1, max(0, math.floor(cx*S))))\n",
-    "            j = int(min(S-1, max(0, math.floor(cy*S))))\n",
+    "\n",
+    "        # Mantém a melhor box por célula (maior área)\n",
+    "        best = {}\n",
+    "\n",
+    "        for cls, cx, cy, w, h in targets:\n",
+    "            i = int((cx * S).clamp(0, S-1).floor())\n",
+    "            j = int((cy * S).clamp(0, S-1).floor())\n",
     "            area = w*h\n",
-    "            if (i,j) in chosen and area <= chosen[(i,j)][0]:\n",
+    "\n",
+    "            if (j,i) in best and area <= best[(j,i)][0]:\n",
     "                continue\n",
+    "\n",
     "            tx, ty = cx*S - i, cy*S - j\n",
-    "            tw, th = math.log(max(1e-6, w*S)), math.log(max(1e-6, h*S))\n",
+    "            tw, th = torch.log(w*S + 1e-6), torch.log(h*S + 1e-6)\n",
+    "\n",
     "            vec = torch.zeros(1+4+C)\n",
-    "            vec[0] = 1.0\n",
+    "            vec[0] = 1\n",
     "            vec[1:5] = torch.tensor([tx, ty, tw, th])\n",
-    "            vec[5 + int(cls)] = 1.0\n",
+    "            vec[5 + int(cls)] = 1\n",
+    "\n",
+    "            best[(j,i)] = (area, vec)\n",
+    "\n",
+    "        for (j,i), (_, vec) in best.items():\n",
     "            T[b, j, i] = vec\n",
-    "            chosen[(i,j)] = (area, vec)\n",
+    "\n",
     "    return T"
    ]
   },
@@ -366,6 +387,29 @@
     "    tr = run_epoch(train_loader, train=True)\n",
     "    va = run_epoch(test_loader, train=False)\n",
     "    print(f\"epoch {ep:02d} | train {tr:.4f} | val {va:.4f}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e35b0cc2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Salva o modelo treinado\n",
+    "torch.save(model.state_dict(), \"miniyolo_mnist.pth\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3cf55a2e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Carrega o modelo treinado\n",
+    "model = MiniYOLO(S=S, C=C).to(device)\n",
+    "model.load_state_dict(torch.load(\"miniyolo_mnist.pth\"))"
    ]
   },
   {
