--- a/18 - YOLO.ipynb
+++ b/18 - YOLO.ipynb
@@ -256,7 +256,7 @@
     "mAP = \\frac{1}{N_{cl}} \\sum_{i=1}^{N_{cl}} AP_i\n",
     "$$\n",
     "\n",
-    "Onde $N_{cl}$ é o número de classes e $AP_i$ é a Precisão Média para a classe $i$. O Ultralytics geralmente reporta o $mAP50$ (mAP com IoU - *Intersection over Union* - de 0.5) e o $mAP50-95$ (média do mAP em vários *thresholds* de IoU de 0.5 a 0.95)."
+    "Onde $N_{cl}$ é o número de classes e $AP_i$ é a Precisão Média para a classe $i$. O Ultralytics geralmente reporta o $mAP50$ (mAP com IoU de 0.5) e o $mAP50-95$ (média do mAP em vários *thresholds* de IoU de 0.5 a 0.95)."
    ]
   },
   {
