add landmark detection

--- a/20 - Landmark Detection.ipynb
+++ b/20 - Landmark Detection.ipynb
@@ -406,22 +406,7 @@
    "outputs": [],
    "source": [
     "# !pip install opencv-python\n",
-    "# !pip install mediapipe\n",
-    "# !wget https://raw.githubusercontent.com/spmallick/learnopencv/blob/master/Introduction-to-MediaPipe/person-full-body.jpg\n",
-    "# !wget https://raw.githubusercontent.com/spmallick/learnopencv/master/Introduction-to-MediaPipe/hand.jpg"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "1f03f665",
-   "metadata": {},
-   "source": [
-    "### Importações Principais\n",
-    "\n",
-    "Agora, importamos as bibliotecas que serão usadas:\n",
-    "* `cv2`: OpenCV, para manipulação de imagens (leitura, conversão de cores).\n",
-    "* `mediapipe`: A biblioteca principal para acessar os modelos de detecção.\n",
-    "* `matplotlib.pyplot`: Para visualização das imagens no notebook."
+    "# !pip install mediapipe"
    ]
   },
   {
@@ -433,7 +418,12 @@
    "source": [
     "import cv2\n",
     "import mediapipe as mp\n",
-    "import matplotlib.pyplot as plt"
+    "import matplotlib.pyplot as plt\n",
+    "import numpy as np\n",
+    "\n",
+    "# Silenciar avisos do MediaPipe (opcional)\n",
+    "import warnings\n",
+    "warnings.filterwarnings('ignore')"
    ]
   },
   {
@@ -443,341 +433,221 @@
    "source": [
     "## Detecção de Pose (Corpo Inteiro)\n",
     "\n",
-    "Começamos com a solução `mp.solutions.pose`.\n",
-    "\n",
-    "### Carregar e Visualizar Imagem de Teste\n",
-    "\n",
-    "Carregamos a imagem `person-full-body.jpg` usando o OpenCV. Note que o OpenCV carrega imagens no formato BGR (Blue-Green-Red). Para exibição correta com o Matplotlib (que espera RGB), usamos a sintaxe `[...,::-1]` para inverter a ordem dos canais de cor."
+    "Nesta seção, inicializamos a solução `mp.solutions.pose`. Este modelo detecta 33 landmarks do corpo."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f0ef9c32",
+   "id": "9e04f47d",
    "metadata": {},
    "outputs": [],
    "source": [
-    "img = cv2.imread('person-full-body.jpg')\n",
-    "\n",
-    "plt.figure(figsize=(15,10))\n",
-    "plt.imshow(img[...,::-1]);"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "de3be7b3",
-   "metadata": {},
-   "source": [
-    "### Inicialização do Modelo de Pose\n",
-    "\n",
-    "Instanciamos o modelo `mp_pose.Pose`. Os parâmetros de configuração são:\n",
-    "\n",
-    "* `static_image_mode=True`: Otimiza o pipeline para imagens estáticas (vídeos seriam `False`).\n",
-    "* `model_complexity=2`: Define a complexidade do modelo (0, 1 ou 2). Modelos mais complexos são mais precisos, mas mais lentos.\n",
-    "* `enable_segmentation=True`: Habilita o modelo a gerar também uma máscara de segmentação da pessoa (além dos landmarks).\n",
-    "* `min_detection_confidence=0.5`: A confiança mínima (50%) para que uma detecção de pessoa seja considerada válida."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "1c4a8833",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Inicializa a solução de pose do MediaPipe\n",
-    "mp_pose = mp.solutions.pose\n",
-    "\n",
-    "pose = mp_pose.Pose(static_image_mode=True,\n",
-    "                    model_complexity=2,\n",
-    "                    enable_segmentation=True,\n",
-    "                    min_detection_confidence=0.5)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "42838973",
-   "metadata": {},
-   "source": [
-    "### Processamento da Imagem\n",
-    "\n",
-    "Os modelos MediaPipe esperam imagens no formato RGB. Portanto, convertemos a imagem `img` (BGR) para `rgb_img` (RGB) usando `cv2.cvtColor` antes de passá-la para o método `pose.process()`. O objeto `results` conterá todos os dados de saída do modelo."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "9091d246",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Converte a imagem BGR para RGB\n",
-    "rgb_img = cv2.cvtColor(img, cv2.COLOR_BGR2RGB)\n",
-    "\n",
-    "# Processa a imagem e obtém os resultados\n",
-    "results = pose.process(rgb_img)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "60f737dd",
-   "metadata": {},
-   "source": [
-    "### Desenho dos Landmarks\n",
-    "\n",
-    "Para visualizar o resultado, criamos uma cópia da imagem original. Em seguida, usamos a utilidade `mp_drawing.draw_landmarks` para desenhar:\n",
-    "\n",
-    "1.  Os landmarks (pontos) detectados, acessados via `results.pose_landmarks`.\n",
-    "2.  As conexões entre os landmarks, definidas em `mp_pose.POSE_CONNECTIONS`.\n",
-    "\n",
-    "Personalizamos a aparência dos pontos e conexões usando `mp_drawing.DrawingSpec`."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "bc4e3e09",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Importa as utilidades de desenho\n",
+    "# Carregar módulos específicos de Pose\n",
     "mp_drawing = mp.solutions.drawing_utils\n",
-    "\n",
-    "annotated_img = img.copy()\n",
-    "\n",
-    "# Desenha os landmarks da pose na imagem\n",
-    "mp_drawing.draw_landmarks(annotated_img,\n",
-    "                          results.pose_landmarks,\n",
-    "                          mp_pose.POSE_CONNECTIONS,\n",
-    "                          # Especifica o estilo dos pontos\n",
-    "                          landmark_drawing_spec=mp_drawing.DrawingSpec(color=(0, 0, 255), thickness=3, circle_radius=3),\n",
-    "                          # Especifica o estilo das conexões\n",
-    "                          connection_drawing_spec=mp_drawing.DrawingSpec(color=(255, 200, 0), thickness=5, circle_radius=5))"
+    "mp_pose = mp.solutions.pose"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "22736cf1",
+   "id": "0e2e8315",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Exibe a imagem anotada\n",
-    "plt.figure(figsize=(20,15))\n",
-    "plt.imshow(annotated_img[...,::-1])\n",
-    "plt.title('Pose');"
+    "# Carregar a imagem\n",
+    "image_pose = cv2.imread('pose.jpg')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "15650b1e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Inicializar o modelo e processar a imagem\n",
+    "with mp_pose.Pose(static_image_mode=True, min_detection_confidence=0.5) as pose:\n",
+    "    \n",
+    "    # Converter BGR para RGB\n",
+    "    image_rgb = cv2.cvtColor(image_pose, cv2.COLOR_BGR2RGB)\n",
+    "    \n",
+    "    # Processar\n",
+    "    results = pose.process(image_rgb)\n",
+    "\n",
+    "    # Desenhar os landmarks\n",
+    "    annotated_image = image_pose.copy()\n",
+    "    mp_drawing.draw_landmarks(\n",
+    "        annotated_image,\n",
+    "        results.pose_landmarks,\n",
+    "        mp_pose.POSE_CONNECTIONS,\n",
+    "        landmark_drawing_spec=mp_drawing.DrawingSpec(color=(0,0,255), thickness=2, circle_radius=2),\n",
+    "        connection_drawing_spec=mp_drawing.DrawingSpec(color=(0,255,0), thickness=2)\n",
+    "    )\n",
+    "    \n",
+    "    # Exibir resultado\n",
+    "    plt.figure(figsize=(10, 8))\n",
+    "    plt.imshow(annotated_image[...,::-1]) # BGR -> RGB para Matplotlib\n",
+    "    plt.title('Detecção de Pose')\n",
+    "    plt.axis('off')\n",
+    "    plt.show()"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "342e1535",
+   "id": "035febf6",
    "metadata": {},
    "source": [
-    "## Detecção de Landmarks de Mão\n",
+    "## Detecção de Mãos\n",
     "\n",
-    "A seguir, utilizamos a solução `mp.solutions.hands` para detectar os 21 landmarks de cada mão.\n",
-    "\n",
-    "### Inicialização do Modelo de Mãos\n",
-    "\n",
-    "Inicializamos `mp_hands.Hands`, especificando:\n",
-    "* `static_image_mode=True`: Para imagens estáticas.\n",
-    "* `max_num_hands=2`: O número máximo de mãos a detectar.\n",
-    "* `min_detection_confidence=0.5`: Confiança mínima de 50%."
+    "Agora, usamos a solução `mp.solutions.hands`. Este modelo detecta 21 landmarks para cada mão."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "899bee36",
+   "id": "b1e1e4fe",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Inicializa a solução de mãos do MediaPipe\n",
-    "mp_hands = mp.solutions.hands\n",
-    "\n",
-    "hands = mp_hands.Hands(static_image_mode=True, max_num_hands=2, min_detection_confidence=0.5)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "84193954",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Carrega a imagem da mão\n",
-    "hand_img = cv2.imread('hand.jpg')\n",
-    "\n",
-    "# Redimensiona a imagem para processamento mais rápido\n",
-    "hand_img = cv2.resize(hand_img, None, fx=0.1, fy=0.1)\n",
-    "\n",
-    "# Converte BGR para RGB\n",
-    "rgb_img = cv2.cvtColor(hand_img, cv2.COLOR_BGR2RGB)\n",
-    "\n",
-    "# Processa a imagem\n",
-    "results = hands.process(rgb_img)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "97587771",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Importa os estilos de desenho padrão\n",
+    "# Carregar módulos específicos de Mãos\n",
+    "mp_drawing = mp.solutions.drawing_utils\n",
     "mp_drawing_styles = mp.solutions.drawing_styles\n",
-    "\n",
-    "annotated_img = hand_img.copy()\n",
-    "\n",
-    "# Itera sobre cada mão detectada\n",
-    "if results.multi_hand_landmarks:\n",
-    "  for hand_landmarks in results.multi_hand_landmarks:\n",
-    "    mp_drawing.draw_landmarks(annotated_img,\n",
-    "                              hand_landmarks,\n",
-    "                              mp_hands.HAND_CONNECTIONS,\n",
-    "                              mp_drawing_styles.get_default_hand_landmarks_style(),\n",
-    "                              mp_drawing_styles.get_default_hand_connections_style())"
+    "mp_hands = mp.solutions.hands"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a17ba02c",
+   "id": "e34eac2d",
    "metadata": {},
    "outputs": [],
    "source": [
-    "plt.figure(figsize=(20,15))\n",
-    "plt.subplot(121)\n",
-    "plt.imshow(hand_img[...,::-1])\n",
-    "plt.title('Hand Image')\n",
-    "plt.subplot(122)\n",
-    "plt.imshow(annotated_img[...,::-1])\n",
-    "plt.title('Hand Detection');"
+    "# Carregar a imagem\n",
+    "image_hand = cv2.imread('hand.jpg')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4485cfc5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Inicializar o modelo e processar\n",
+    "with mp_hands.Hands(\n",
+    "    static_image_mode=True,\n",
+    "    max_num_hands=2,\n",
+    "    min_detection_confidence=0.5) as hands:\n",
+    "    \n",
+    "    # Converter BGR para RGB\n",
+    "    image_rgb = cv2.cvtColor(image_hand, cv2.COLOR_BGR2RGB)\n",
+    "    \n",
+    "    # Processar\n",
+    "    results = hands.process(image_rgb)\n",
+    "\n",
+    "    # Desenhar landmarks\n",
+    "    annotated_image = image_hand.copy()\n",
+    "    for hand_landmarks in results.multi_hand_landmarks:\n",
+    "        mp_drawing.draw_landmarks(\n",
+    "            annotated_image,\n",
+    "            hand_landmarks,\n",
+    "            mp_hands.HAND_CONNECTIONS,\n",
+    "            mp_drawing_styles.get_default_hand_landmarks_style(),\n",
+    "            mp_drawing_styles.get_default_hand_connections_style()\n",
+    "        )\n",
+    "    \n",
+    "    # Exibir resultado\n",
+    "    plt.figure(figsize=(10, 8))\n",
+    "    plt.imshow(annotated_image[...,::-1])\n",
+    "    plt.title('Detecção de Mãos')\n",
+    "    plt.axis('off')\n",
+    "    plt.show()"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "fb2d72d5",
+   "id": "0e6d2024",
    "metadata": {},
    "source": [
     "## Detecção de Malha Facial (Face Mesh)\n",
     "\n",
-    "Finalmente, exploramos o `mp.solutions.face_mesh`, que detecta 468 landmarks no rosto, permitindo aplicações detalhadas como rastreamento de íris e contornos faciais.\n",
-    "\n",
-    "### Inicialização do Modelo Face Mesh\n",
-    "\n",
-    "Inicializamos `mp_face_mesh.FaceMesh`. O parâmetro de destaque é:\n",
-    "* `refine_landmarks=True`: Isso habilita o modelo a refinar as coordenadas ao redor dos olhos e lábios ativa a detecção dos landmarks da **íris**."
+    "Por fim, usamos `mp.solutions.face_mesh` para detectar 478 landmarks faciais (incluindo íris, se `refine_landmarks=True`)."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4f61aa4c",
+   "id": "e95b415e",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Inicializa a solução de malha facial\n",
-    "mp_face_mesh = mp.solutions.face_mesh\n",
-    "\n",
-    "drawing_spec = mp_drawing.DrawingSpec(thickness=1, circle_radius=1)\n",
-    "\n",
-    "face_mesh = mp_face_mesh.FaceMesh(static_image_mode=True, \n",
-    "                                  max_num_faces=1, \n",
-    "                                  refine_landmarks=True, \n",
-    "                                  min_detection_confidence=0.5)"
+    "# Carregar módulos específicos de Face Mesh\n",
+    "mp_drawing = mp.solutions.drawing_utils\n",
+    "mp_drawing_styles = mp.solutions.drawing_styles\n",
+    "mp_face_mesh = mp.solutions.face_mesh"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "09888569",
+   "id": "b9c88d83",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Converte BGR para RGB\n",
-    "rgb_img = cv2.cvtColor(img, cv2.COLOR_BGR2RGB)\n",
-    "\n",
-    "# Processa a imagem\n",
-    "results = face_mesh.process(rgb_img)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "25b587f7",
-   "metadata": {},
-   "source": [
-    "### Desenho das Variações da Malha Facial\n",
-    "\n",
-    "O MediaPipe Face Mesh fornece diferentes conjuntos de conexões para visualização. Para demonstrar, criamos três cópias da imagem.\n",
-    "\n",
-    "Iteramos sobre os rostos detectados (`results.multi_face_landmarks`) e desenhamos:\n",
-    "1.  `FACEMESH_TESSELATION`: A malha facial completa (Tesselation).\n",
-    "2.  `FACEMESH_CONTOURS`: Apenas os contornos do rosto, olhos, nariz e boca.\n",
-    "3.  `FACEMESH_IRISES`: Os landmarks específicos da íris (só funciona se `refine_landmarks=True`)."
+    "# Carregar a imagem\n",
+    "image_face = cv2.imread('face.jpg')"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "35fd3b91",
+   "id": "49684060",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Cria cópias da imagem para diferentes visualizações\n",
-    "img_mesh = img.copy()\n",
-    "img_contours = img.copy()\n",
-    "img_iris = img.copy()\n",
-    "\n",
-    "if results.multi_face_landmarks:\n",
-    "  for face_landmarks in results.multi_face_landmarks:\n",
-    "    # 1. Desenha a malha (Tesselation)\n",
-    "    mp_drawing.draw_landmarks(img_mesh,\n",
-    "                              face_landmarks,\n",
-    "                              mp_face_mesh.FACEMESH_TESSELATION,\n",
-    "                              landmark_drawing_spec=None,\n",
-    "                              connection_drawing_spec=mp_drawing.DrawingSpec(color=(0, 200, 0), thickness=1, circle_radius=1))\n",
+    "# Inicializar o modelo e processar\n",
+    "with mp_face_mesh.FaceMesh(\n",
+    "    static_image_mode=True,\n",
+    "    max_num_faces=1,\n",
+    "    refine_landmarks=True,\n",
+    "    min_detection_confidence=0.5) as face_mesh:\n",
     "    \n",
-    "    # 2. Desenha os contornos\n",
-    "    mp_drawing.draw_landmarks(img_contours,\n",
-    "                              face_landmarks,\n",
-    "                              mp_face_mesh.FACEMESH_CONTOURS,\n",
-    "                              landmark_drawing_spec=None,\n",
-    "                              connection_drawing_spec=mp_drawing_styles.get_default_face_mesh_contours_style())\n",
+    "    # Converter BGR para RGB\n",
+    "    image_rgb = cv2.cvtColor(image_face, cv2.COLOR_BGR2RGB)\n",
     "    \n",
-    "    # 3. Desenha as íris (requer refine_landmarks=True)\n",
-    "    mp_drawing.draw_landmarks(img_iris,\n",
-    "                              face_landmarks,\n",
-    "                              mp_face_mesh.FACEMESH_IRISES,\n",
-    "                              landmark_drawing_spec=None,\n",
-    "                              connection_drawing_spec=mp_drawing_styles.get_default_face_mesh_iris_connections_style())"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "61a39f46",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Exibe as três variações de malha facial, com zoom na região do rosto\n",
-    "plt.figure(figsize=(20,20))\n",
+    "    # Processar\n",
+    "    results = face_mesh.process(image_rgb)\n",
     "\n",
-    "# Fatiamento da imagem [Y_start:Y_end, X_start:X_end]\n",
-    "face_region = (slice(0, 500), slice(700, 1350))\n",
+    "    # Desenhar landmarks\n",
+    "    annotated_image = image_face.copy()\n",
+    "    for face_landmarks in results.multi_face_landmarks:\n",
+    "        \n",
+    "        # Desenhamos apenas os contornos e a íris para uma visualização mais limpa\n",
+    "        \n",
+    "        # Contornos\n",
+    "        mp_drawing.draw_landmarks(\n",
+    "            image=annotated_image,\n",
+    "            landmark_list=face_landmarks,\n",
+    "            connections=mp_face_mesh.FACEMESH_CONTOURS,\n",
+    "            landmark_drawing_spec=None,\n",
+    "            connection_drawing_spec=mp_drawing_styles.get_default_face_mesh_contours_style()\n",
+    "        )\n",
+    "        # Íris\n",
+    "        mp_drawing.draw_landmarks(\n",
+    "            image=annotated_image,\n",
+    "            landmark_list=face_landmarks,\n",
+    "            connections=mp_face_mesh.FACEMESH_IRISES,\n",
+    "            landmark_drawing_spec=None,\n",
+    "            connection_drawing_spec=mp_drawing_styles.get_default_face_mesh_iris_connections_style()\n",
+    "        )\n",
     "\n",
-    "plt.subplot(131)\n",
-    "plt.imshow(img_mesh[...,::-1][face_region])\n",
-    "plt.title('Face Mesh');\n",
-    "\n",
-    "plt.subplot(132)\n",
-    "plt.imshow(img_contours[...,::-1][face_region])\n",
-    "plt.title('Face Contours');\n",
-    "\n",
-    "plt.subplot(133)\n",
-    "plt.imshow(img_iris[...,::-1][face_region])\n",
-    "plt.title('Iris');"
+    "    # Exibir resultado\n",
+    "    plt.figure(figsize=(10, 8))\n",
+    "    plt.imshow(annotated_image[...,::-1])\n",
+    "    plt.title('Detecção de Malha Facial (Contornos e Íris)')\n",
+    "    plt.axis('off')\n",
+    "    plt.show()"
    ]
   }
  ],
