add landmark detection

--- a/20 - Landmark Detection.ipynb
+++ b/20 - Landmark Detection.ipynb
@@ -456,7 +456,8 @@
    "outputs": [],
    "source": [
     "# Carregar a imagem\n",
-    "image_pose = cv2.imread('pose.jpg')"
+    "image_pose = cv2.imread('pose.jpg')\n",
+    "image_pose = cv2.cvtColor(image_pose, cv2.COLOR_BGR2RGB)"
    ]
   },
   {
@@ -468,12 +469,9 @@
    "source": [
     "# Inicializar o modelo e processar a imagem\n",
     "with mp_pose.Pose(static_image_mode=True, min_detection_confidence=0.5) as pose:\n",
-    "    \n",
-    "    # Converter BGR para RGB\n",
-    "    image_rgb = cv2.cvtColor(image_pose, cv2.COLOR_BGR2RGB)\n",
-    "    \n",
+    "\n",
     "    # Processar\n",
-    "    results = pose.process(image_rgb)\n",
+    "    results = pose.process(image_pose)\n",
     "\n",
     "    # Desenhar os landmarks\n",
     "    annotated_image = image_pose.copy()\n",
@@ -487,7 +485,7 @@
     "    \n",
     "    # Exibir resultado\n",
     "    plt.figure(figsize=(10, 8))\n",
-    "    plt.imshow(annotated_image[...,::-1]) # BGR -> RGB para Matplotlib\n",
+    "    plt.imshow(annotated_image)\n",
     "    plt.title('Detecção de Pose')\n",
     "    plt.axis('off')\n",
     "    plt.show()"
@@ -524,7 +522,8 @@
    "outputs": [],
    "source": [
     "# Carregar a imagem\n",
-    "image_hand = cv2.imread('hand.jpg')"
+    "image_hand = cv2.imread('hand.jpg')\n",
+    "image_hand = cv2.cvtColor(image_hand, cv2.COLOR_BGR2RGB)"
    ]
   },
   {
@@ -540,11 +539,8 @@
     "    max_num_hands=2,\n",
     "    min_detection_confidence=0.5) as hands:\n",
     "    \n",
-    "    # Converter BGR para RGB\n",
-    "    image_rgb = cv2.cvtColor(image_hand, cv2.COLOR_BGR2RGB)\n",
-    "    \n",
     "    # Processar\n",
-    "    results = hands.process(image_rgb)\n",
+    "    results = hands.process(image_hand)\n",
     "\n",
     "    # Desenhar landmarks\n",
     "    annotated_image = image_hand.copy()\n",
@@ -559,7 +555,7 @@
     "    \n",
     "    # Exibir resultado\n",
     "    plt.figure(figsize=(10, 8))\n",
-    "    plt.imshow(annotated_image[...,::-1])\n",
+    "    plt.imshow(annotated_image)\n",
     "    plt.title('Detecção de Mãos')\n",
     "    plt.axis('off')\n",
     "    plt.show()"
@@ -596,7 +592,8 @@
    "outputs": [],
    "source": [
     "# Carregar a imagem\n",
-    "image_face = cv2.imread('face.jpg')"
+    "image_face = cv2.imread('face.jpg')\n",
+    "image_face = cv2.cvtColor(image_face, cv2.COLOR_BGR2RGB)"
    ]
   },
   {
@@ -613,19 +610,35 @@
     "    refine_landmarks=True,\n",
     "    min_detection_confidence=0.5) as face_mesh:\n",
     "    \n",
-    "    # Converter BGR para RGB\n",
-    "    image_rgb = cv2.cvtColor(image_face, cv2.COLOR_BGR2RGB)\n",
-    "    \n",
     "    # Processar\n",
-    "    results = face_mesh.process(image_rgb)\n",
+    "    results = face_mesh.process(image_face)\n",
     "\n",
     "    # Desenhar landmarks\n",
     "    annotated_image = image_face.copy()\n",
     "    for face_landmarks in results.multi_face_landmarks:\n",
+    "\n",
+    "        for face_landmarks in results.multi_face_landmarks:\n",
+    "            h, w, _ = image_face.shape\n",
+    "            x_points = [lm.x * w for lm in face_landmarks.landmark]\n",
+    "            y_points = [lm.y * h for lm in face_landmarks.landmark]\n",
+    "            \n",
+    "            plt.figure(figsize=(10, 8))\n",
+    "            plt.imshow(image_face)\n",
+    "            plt.scatter(x_points, y_points, s=5, c='lime')\n",
+    "            plt.title('Landmarks Faciais - Apenas Pontos')\n",
+    "            plt.axis('off')\n",
+    "            plt.show()\n",
     "        \n",
-    "        # Desenhamos apenas os contornos e a íris para uma visualização mais limpa\n",
-    "        \n",
-    "        # Contornos\n",
+    "        # 1. Tessellation (malha completa)\n",
+    "        mp_drawing.draw_landmarks(\n",
+    "            image=annotated_image,\n",
+    "            landmark_list=face_landmarks,\n",
+    "            connections=mp_face_mesh.FACEMESH_TESSELATION,\n",
+    "            landmark_drawing_spec=None,\n",
+    "            connection_drawing_spec=mp_drawing_styles.get_default_face_mesh_tesselation_style()\n",
+    "        )\n",
+    "\n",
+    "        # 2. Contornos (linhas do rosto)\n",
     "        mp_drawing.draw_landmarks(\n",
     "            image=annotated_image,\n",
     "            landmark_list=face_landmarks,\n",
@@ -633,7 +646,8 @@
     "            landmark_drawing_spec=None,\n",
     "            connection_drawing_spec=mp_drawing_styles.get_default_face_mesh_contours_style()\n",
     "        )\n",
-    "        # Íris\n",
+    "\n",
+    "        # 3. Íris\n",
     "        mp_drawing.draw_landmarks(\n",
     "            image=annotated_image,\n",
     "            landmark_list=face_landmarks,\n",
@@ -644,7 +658,7 @@
     "\n",
     "    # Exibir resultado\n",
     "    plt.figure(figsize=(10, 8))\n",
-    "    plt.imshow(annotated_image[...,::-1])\n",
+    "    plt.imshow(annotated_image)\n",
     "    plt.title('Detecção de Malha Facial (Contornos e Íris)')\n",
     "    plt.axis('off')\n",
     "    plt.show()"
